--- a/login.html
+++ b/login.html
@@ -33,9 +33,9 @@
         <p class="welcome-header__text">log in with your email or phone number.</p>
     </header>
 
-    <form id="login-form">
-        <input type="text" placeholder="Email or phone number" />
-        <input type="password" placeholder="Password" />
+    <form action="friends.html" method="GET" id="login-form">
+        <input name="username" required type="text" placeholder="Email or phone number" />
+        <input name="password" type="password" placeholder="Password" />
         <input type="submit" value="Log In" />
         <input type="submit" value="Sign Up" />
         <a href="#">Find Kokoa Account or Password</a>
