--- a/login.html
+++ b/login.html
@@ -11,15 +11,15 @@
 <body>
     <div class="status-bar">
         <div class="status-bar__column">
-            <span>No Service</span>
+            <span>SKT</span>
             <!-- To do : Wifi Icon-->
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>21:56</span>
         </div>
         <div class="status-bar__column">
-            <span>11%</span>
+            <span>100%</span>
             <!-- To do : Battery Icon -->
             <i class="fas fa-battery-full fa-lg"></i>
             <!-- To do : Lightning Icon -->
