--- a/friends.html
+++ b/friends.html
@@ -42,7 +42,10 @@
                 <a class="nav__link" href="#"><i class="fas fa-search fa-lg"></i></a>
             </li>
             <li class="nav__btn">
-                <a class="nav__link" href="#"><i class="fas fa-ellipsis-h fa-lg"></i></a>
+                <a class="nav__link" href="#">
+                    <span class="nav__dot"></span>
+                    <i class="fas fa-ellipsis-h fa-lg"></i>
+                </a>
             </li>
         </ul>
     </nav>
