--- a/chats.html
+++ b/chats.html
@@ -48,7 +48,7 @@
             </div>
             <div class="user-component__column user-component__chat">
                 <span class="user-component__time">21:22</span>
-                <span class="user-component__notification">1</span>
+                <span class="notification">1</span>
             </div>
         </div>
     </main>
@@ -61,7 +61,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
-                    <span class="nav__notification">1</span>
+                    <span class="notification nav__notification">1</span>
                     <i class="far fa-comment fa-lg"></i>
                 </a>
             </li>
