--- a/friends.html
+++ b/friends.html
@@ -83,7 +83,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
-                    <span class="nav__notification">1</span>
+                    <span class="notification nav__notification">1</span>
                     <i class="far fa-comment fa-lg"></i>
                 </a>
             </li>
