--- a/chats.html
+++ b/chats.html
@@ -46,7 +46,7 @@
                     <h6 class="user-component__subtitle">Hi, guys!! I'm ShimYS</h6>
                 </div>
             </div>
-            <div class="user-component__column user-component__chat">
+            <div class="user-component__column">
                 <span class="user-component__time">21:22</span>
                 <span class="notification">1</span>
             </div>
@@ -70,7 +70,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="more.html">
-                    <span class="nav__dot"></span>
+                    <span class="dot nav__dot"></span>
                     <i class="fas fa-ellipsis-h fa-lg"></i>
                 </a>
             </li>
