--- a/friends.html
+++ b/friends.html
@@ -69,8 +69,11 @@
                 </div>
             </div>
             <div class="user-component__column">
-                <span>2</span>
-                <i class="fas fa-chevron-right fa-xs"></i>
+                <div>
+                    <span>2</span>
+                    <i class="fas fa-chevron-right fa-xs"></i>
+
+                </div>
             </div>
         </div>
     </main>
@@ -92,7 +95,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="more.html">
-                    <span class="nav__dot"></span>
+                    <span class="dot nav__dot"></span>
                     <i class="fas fa-ellipsis-h fa-lg"></i>
                 </a>
             </li>
