--- a/find.html
+++ b/find.html
@@ -38,10 +38,42 @@
         </div>
     </header>
 
+
+    <div class="find-icons">
+        <div class="find-icons__icon">
+            <i class="fas fa-qrcode"></i>
+            <span>QR Code</span>
+        </div>
+        <div class="find-icons__icon">
+            <i class="far fa-address-book"></i>
+            <span>Add by Contacts</span>
+        </div>
+        <div class="find-icons__icon">
+            <i class="fas fa-fingerprint"></i>
+            <span>Add by ID</span>
+        </div>
+        <div class="find-icons__icon">
+            <i class="far fa-envelope"></i>
+            <span>Invite</span>
+        </div>
+    </div>
     <main class="main-screen">
+        <div class="boundary-line">
+            <span>Recommended Friends</span>
+        </div>
 
+        <div class="recommended-friends-info">
+            <p>You have no recommended friends.</p>
+        </div>
+
+        <div class="boundary-line">
+            <span>Open Chat</span>
+            <div>
+                <span>Go to Openchat Home</span>
+                <i class="fas fa-chevron-right fa-xs"></i>
+            </div>
+        </div>
     </main>
-
 
     <nav class="nav">
         <ul class="nav__list">
