--- a/friends.html
+++ b/friends.html
@@ -55,7 +55,7 @@
             <div class="user-component__column"></div>
         </div>
 
-        <div class="main-screen__channel">
+        <div class="boundary-line">
             <span>Channel</span>
             <i class="fas fa-chevron-up fa-xs"></i>
         </div>
