Update find.html and find.css

--- a/find.html
+++ b/find.html
@@ -57,6 +57,7 @@
             <span>Invite</span>
         </div>
     </div>
+
     <main class="main-screen">
         <div class="boundary-line">
             <span>Recommended Friends</span>
@@ -71,6 +72,50 @@
             <div>
                 <span>Go to Openchat Home</span>
                 <i class="fas fa-chevron-right fa-xs"></i>
+            </div>
+        </div>
+
+        <div class="open-chat">
+            <div class="open-post">
+                <div class="open-post__column">
+                    <h5 class="open-post__title">#BTS</h5>
+                    <h6 class="open-post__hashtags">#bts#army#friends</h6>
+                    <div class="open-post__members">
+                        <img src="img/user-profile.jpg" alt="user-img">
+                        <span class="open-post__member-count">802 members</span>
+                        <div class="divider"></div>
+                        <span class="open-post__member-status">Active</span>
+                    </div>
+                </div>
+                <div class="open-post__column">
+                    <img src="img/user-profile.jpg" alt="openchat-img">
+                    <div class="open-post__heart-count">
+                        <i class="fas fa-heart"></i>
+                        <span>326</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="find-boundary-line"></div>
+
+            <div class="open-post">
+                <div class="open-post__column">
+                    <h5 class="open-post__title">#Bts Gang~</h5>
+                    <h6 class="open-post__hashtags">#englishonly #ipurpleyou #jimin #taeta...</h6>
+                    <div class="open-post__members">
+                        <img src="img/user-profile.jpg" alt="user-img">
+                        <span class="open-post__member-count">299 members</span>
+                        <div class="divider"></div>
+                        <span class="open-post__member-status">Active</span>
+                    </div>
+                </div>
+                <div class="open-post__column">
+                    <img src="img/user-profile.jpg" alt="openchat-img">
+                    <div class="open-post__heart-count">
+                        <i class="fas fa-heart"></i>
+                        <span>215</span>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
