--- a/more.html
+++ b/more.html
@@ -52,7 +52,36 @@
                     </div>
                 </div>
             </div>
-            <div class="user-component__column"></div>
+            <div class="user-component__column">
+                <i class="far fa-caret-square-down user-component__square-down"></i>
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <i class="far fa-calendar-check"></i>
+                <span>Calendar</span>
+            </div>
+            <div>
+                <i class="fab fa-instalod"></i>
+                <span>Talk Drive</span>
+            </div>
+            <div>
+                <i class="far fa-laugh-beam"></i>
+                <span>Emotions</span>
+            </div>
+            <div>
+                <i class="fas fa-brush"></i>
+                <span>Themes</span>
+            </div>
+            <div>
+                <i class="fas fa-star-of-david"></i>
+                <span>Account</span>
+            </div>
+            <div>
+                <i class="far fa-comments"></i>
+                <span>Openchat</span>
+            </div>
         </div>
 
 
