--- a/more.html
+++ b/more.html
@@ -57,33 +57,51 @@
             </div>
         </div>
 
-        <div>
-            <div>
+        <div class="icon-raw">
+            <div class="icon-raw__icon">
                 <i class="far fa-calendar-check"></i>
                 <span>Calendar</span>
             </div>
-            <div>
+            <div class="icon-raw__icon">
                 <i class="fab fa-instalod"></i>
                 <span>Talk Drive</span>
             </div>
-            <div>
+            <div class="icon-raw__icon">
                 <i class="far fa-laugh-beam"></i>
                 <span>Emotions</span>
             </div>
-            <div>
+            <div class="icon-raw__icon">
                 <i class="fas fa-brush"></i>
                 <span>Themes</span>
             </div>
-            <div>
+            <div class="icon-raw__icon">
                 <i class="fas fa-star-of-david"></i>
                 <span>Account</span>
             </div>
-            <div>
+            <div class="icon-raw__icon">
                 <i class="far fa-comments"></i>
                 <span>Openchat</span>
             </div>
         </div>
 
+        <div class="boundary-line more-boundary-line">
+            <span>Suggestions</span>
+        </div>
+
+        <div class="more-suggestions">
+            <div class="more-suggestions__icon">
+                <img src="img/kokoa-story.png" alt="Kokoa Story">
+                <span>Kokoa Story</span>
+            </div>
+            <div class="more-suggestions__icon">
+                <img src="img/kokoa-frieonds.png" alt="Kokoa Friends">
+                <span>Kokoa Friends</span>
+            </div>
+            <div class="more-suggestions__icon">
+                <img src="img/kokoa-game.jpg" alt="Kokoa Game">
+                <span>Kokoa Game</span>
+            </div>
+        </div>
 
     </main>
 
