Update more.html and settings.html

--- a/more.html
+++ b/more.html
@@ -34,7 +34,7 @@
             <span><i class="fas fa-music fa-lg"></i></span>
             <span>
                 <span class="dot screen-header__dot"></span>
-                <i class="fas fa-cog fa-lg"></i>
+                <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
             </span>
         </div>
     </header>
@@ -63,6 +63,7 @@
                 <span>Calendar</span>
             </div>
             <div class="icon-raw__icon">
+                <span class="dot more__dot"></span>
                 <i class="fab fa-instalod"></i>
                 <span>Talk Drive</span>
             </div>
@@ -90,15 +91,15 @@
 
         <div class="more-suggestions">
             <div class="more-suggestions__icon">
-                <img src="img/kokoa-story.png" alt="Kokoa Story">
+                <img src="img/suggestion.jpg" alt="Kokoa Story">
                 <span>Kokoa Story</span>
             </div>
             <div class="more-suggestions__icon">
-                <img src="img/kokoa-frieonds.png" alt="Kokoa Friends">
+                <img src="img/suggestion.jpg" alt="Kokoa Friends">
                 <span>Kokoa Friends</span>
             </div>
             <div class="more-suggestions__icon">
-                <img src="img/kokoa-game.jpg" alt="Kokoa Game">
+                <img src="img/suggestion.jpg" alt="Kokoa Game">
                 <span>Kokoa Game</span>
             </div>
         </div>
