--- a/find.html
+++ b/find.html
@@ -33,7 +33,7 @@
             <span><i class="fas fa-search fa-lg"></i></span>
             <span>
                 <span class="dot screen-header__dot"></span>
-                <i class="fas fa-cog fa-lg"></i>
+                <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
             </span>
         </div>
     </header>
