--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chats - Kokoa Clone</title>
+    <title>More - Kokoa Clone</title>
 </head>
 
 <body>
@@ -27,30 +27,9 @@
         </div>
     </div>
 
-    <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
-        <div class="screen-header__icons">
-            <span><i class="fas fa-search fa-lg"></i></span>
-            <span><i class="fas fa-comment-medical fa-lg"></i></span>
-            <span><i class="fas fa-music fa-lg"></i></span>
-            <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
-        </div>
-    </header>
-
     <main class="main-screen">
-        <div class="user-component">
-            <div class="user-component__column">
-                <img src="img/user-profile.jpg" alt="user-avatar" class="user-component__avatar">
-                <div class="user-component__text">
-                    <h4 class="user-component__title">ShimYS</h4>
-                    <h6 class="user-component__subtitle">Hi, guys!! I'm ShimYS</h6>
-                </div>
-            </div>
-            <div class="user-component__column">
-                <span class="user-component__time">21:22</span>
-                <span class="notification">1</span>
-            </div>
-        </div>
+
+
     </main>
 
 
