--- a/settings.html
+++ b/settings.html
@@ -16,7 +16,7 @@
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <a href="login.html"><span>21:56</span></a>
         </div>
         <div class="status-bar__column">
             <span>11%</span>
@@ -27,7 +27,122 @@
         </div>
     </div>
 
+    <header class="alt-screen-header">
+        <div class="alt-screen-header__icons">
+            <i class="fas fa-chevron-left fa-lg"></i>
+        </div>
+        <h1 class="alt-screen-header__title">Settings</h1>
+        <div class="alt-screen-header__icons">
+            <span><i class="fas fa-search fa-lg"></i></span>
+        </div>
+    </header>
+
     <main class="main-screen">
+        <div class="settings-setting">
+            <div class="settings__column">
+                <i class="fas fa-bullhorn"></i>
+                <span class="settings__title">Notices</span>
+            </div>
+            <div class="settings__column">
+                <span class="settings__subtitle"></span>
+            </div>
+        </div>
+
+        <div class="settings-setting">
+            <div class="settings__column">
+                <i class="fas fa-flask"></i>
+                <span class="settings__title">Kokoa Lab</span>
+            </div>
+            <div class="settings__column">
+                <span class="settings__subtitle"></span>
+            </div>
+        </div>
+
+        <div class="settings-setting">
+            <div class="settings__column">
+                <i class="fas fa-exclamation-circle"></i>
+                <span class="settings__title">Version</span>
+            </div>
+            <div class="settings__column">
+                <span class="settings__subtitle">Latest Version</span>
+            </div>
+        </div>
+    </main>
+
+    <div class="settings-boundary-line"></div>
+
+    <main class="main-screen">
+        <div class="settings-setting">
+            <div class="settings__column">
+                <i class="fas fa-lock"></i>
+                <span class="settings__title">Privacy</span>
+            </div>
+            <div class="settings__column">
+                <span class="settings__subtitle"></span>
+            </div>
+        </div>
+
+        <div class="settings-setting">
+            <div class="settings__column">
+                <i class="far fa-bell"></i>
+                <span class="settings__title">Notification</span>
+            </div>
+            <div class="settings__column">
+                <span class="settings__subtitle"></span>
+            </div>
+        </div>
+
+        <div class="settings-setting">
+            <div class="settings__column">
+                <i class="far fa-user"></i>
+                <span class="settings__title">Friends</span>
+            </div>
+            <div class="settings__column">
+                <span class="settings__subtitle"></span>
+            </div>
+        </div>
+
+        <div class="settings-setting">
+            <div class="settings__column">
+                <i class="far fa-comment"></i>
+                <span class="settings__title">Chats</span>
+            </div>
+            <div class="settings__column">
+                <span class="settings__subtitle"></span>
+            </div>
+        </div>
+
+        <div class="settings-setting">
+            <div class="settings__column">
+                <i class="far fa-sun"></i>
+                <span class="settings__title">Display</span>
+                <span class="settings__notification">N</span>
+            </div>
+            <div class="settings__column">
+                <span class="settings__subtitle"></span>
+            </div>
+        </div>
+
+        <div class="settings-setting">
+            <div class="settings__column">
+                <i class="fas fa-brush"></i>
+                <span class="settings__title">Themes</span>
+                <span class="settings__notification">N</span>
+            </div>
+            <div class="settings__column">
+                <span class="settings__subtitle">Default theme</span>
+            </div>
+        </div>
+
+        <div class="settings-setting">
+            <div class="settings__column">
+                <i class="fas fa-phone-alt"></i>
+                <span class="settings__title">Call</span>
+            </div>
+            <div class="settings__column">
+                <span class="settings__subtitle"></span>
+            </div>
+        </div>
 
 
     </main>
