--- a/find.html
+++ b/find.html
@@ -16,7 +16,7 @@
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <a href="login.html"><span>21:56</span></a>
         </div>
         <div class="status-bar__column">
             <span>11%</span>
