--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <span>21:56</span>
+            <a href="login.html"><span>21:56</span></a>
         </div>
         <div class="status-bar__column">
             <span>100%</span>
