--- a/chat.html
+++ b/chat.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chats - Kokoa Clone</title>
+    <title>Chat - Kokoa Clone</title>
 </head>
 
-<body>
+<body id="chat-screen">
     <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
@@ -27,33 +27,21 @@
         </div>
     </div>
 
-    <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
-        <div class="screen-header__icons">
-            <span><i class="fas fa-search fa-lg"></i></span>
-            <span><i class="fas fa-comment-medical fa-lg"></i></span>
-            <span><i class="fas fa-music fa-lg"></i></span>
-            <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
+    <header class="alt-screen-header">
+        <div class="alt-screen-header__icons">
+            <i class="fas fa-chevron-left fa-lg"></i>
+        </div>
+        <h1 class="alt-screen-header__title">Yammy</h1>
+        <div class="alt-screen-header__icons">
+            <i class="fas fa-search fa-lg"></i>
+            <i class="fas fa-bars fa-lg"></i>
         </div>
     </header>
 
-    <main class="main-screen">
-        <a href="chat.html">
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img src="img/user-profile.jpg" alt="user-avatar" class="user-component__avatar">
-
-                    <div class="user-component__text">
-                        <h4 class="user-component__title">ShimYS</h4>
-                        <h6 class="user-component__subtitle">Hi, guys!! I'm ShimYS</h6>
-                    </div>
-                </div>
-                <div class="user-component__column">
-                    <span class="user-component__time">21:22</span>
-                    <span class="notification">1</span>
-                </div>
-            </div>
-        </a>
+    <main class="main-screen main-chat">
+        <div class="chat__timestamp">
+            Tuesday, June 30, 2020
+        </div>
     </main>
 
 
