--- a/chat.html
+++ b/chat.html
@@ -42,6 +42,44 @@
         <div class="chat__timestamp">
             Tuesday, June 30, 2020
         </div>
+
+        <div class="message-row">
+            <img src="img/user-profile.jpg" alt="">
+            <div class="message-row__content">
+                <span class="message__author">
+                    ShimYS
+                </span>
+                <div class="message__info">
+                    <span class="message__bubble">Hi!</span>
+                    <span class="message__titme">21:27</span>
+                </div>
+            </div>
+        </div>
+        <div class="message-row">
+            <img src="img/user-profile.jpg" alt="">
+            <div class="message-row__content">
+                <span class="message__author">
+                    ShimYS
+                </span>
+                <div class="message__info">
+                    <span class="message__bubble">What are you doing now?</span>
+                    <span class="message__titme">21:28</span>
+                </div>
+            </div>
+        </div>
+        <div class="message-row">
+            <img src="img/user-profile.jpg" alt="">
+            <div class="message-row__content">
+                <span class="message__author">
+                    ShimYS
+                </span>
+                <div class="message__info">
+                    <span class="message__bubble">Wake up!!!!!</span>
+                    <span class="message__titme">21:35</span>
+                </div>
+            </div>
+        </div>
+
     </main>
 
 
