--- a/chat.html
+++ b/chat.html
@@ -74,37 +74,42 @@
                     ShimYS
                 </span>
                 <div class="message__info">
-                    <span class="message__bubble">Wake up!!!!!</span>
+                    <span class="message__bubble">Wake up!!!!! :(</span>
                     <span class="message__titme">21:35</span>
+                </div>
+            </div>
+        </div>
+        <div class="message-row message-row--own">
+            <div class="message-row__content">
+                <div class="message__info">
+                    <span class="message__bubble">hi</span>
+                    <span class="message__titme">21:40</span>
+                </div>
+            </div>
+        </div>
+        <div class="message-row message-row--own">
+            <div class="message-row__content">
+                <div class="message__info">
+                    <span class="message__bubble">:)</span>
+                    <span class="message__titme">21:40</span>
                 </div>
             </div>
         </div>
 
     </main>
 
-
-    <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link" href="friends.html"><i class="fas fa-user fa-lg"></i></a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="chats.html">
-                    <span class="notification nav__notification">1</span>
-                    <i class="far fa-comment fa-lg"></i>
-                </a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="find.html"><i class="fas fa-search fa-lg"></i></a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="more.html">
-                    <span class="dot nav__dot"></span>
-                    <i class="fas fa-ellipsis-h fa-lg"></i>
-                </a>
-            </li>
-        </ul>
-    </nav>
+    <form class="reply">
+        <div class="reply__column">
+            <i class="far fa-plus-square fa-lg"></i>
+        </div>
+        <div class="reply__column">
+            <input type="text" placeholder="Write a message..." />
+            <i class="far fa-smile-beam fa-lg"></i>
+            <button>
+                <i class="far fa-paper-plane fa-lg"></i>
+            </button>
+        </div>
+    </form>
 
     <script src="https://kit.fontawesome.com/1a122948e3.js" crossorigin="anonymous"></script>
 </body>
