--- a/chat.html
+++ b/chat.html
@@ -29,7 +29,7 @@
 
     <header class="alt-screen-header">
         <div class="alt-screen-header__icons">
-            <i class="fas fa-chevron-left fa-lg"></i>
+            <a href="chats.html"><i class="fas fa-chevron-left fa-lg"></i></a>
         </div>
         <h1 class="alt-screen-header__title">Yammy</h1>
         <div class="alt-screen-header__icons">
