--- a/friends.html
+++ b/friends.html
@@ -101,6 +101,9 @@
             </li>
         </ul>
     </nav>
+    <div id="splash-screen">
+        <i class="fas fa-comment"></i>
+    </div>
 
     <script src="https://kit.fontawesome.com/1a122948e3.js" crossorigin="anonymous"></script>
 </body>
