--- a/chat.html
+++ b/chat.html
@@ -110,7 +110,9 @@
             </button>
         </div>
     </form>
-
+    <div id="no-mobile">
+        <span>Your screen is too big :(</span>
+    </div>
     <script src="https://kit.fontawesome.com/1a122948e3.js" crossorigin="anonymous"></script>
 </body>
 
