--- a/friends.html
+++ b/friends.html
@@ -101,8 +101,13 @@
             </li>
         </ul>
     </nav>
+
     <div id="splash-screen">
         <i class="fas fa-comment"></i>
+    </div>
+
+    <div id="no-mobile">
+        <span>Your screen is too big :(</span>
     </div>
 
     <script src="https://kit.fontawesome.com/1a122948e3.js" crossorigin="anonymous"></script>
