--- a/login.html
+++ b/login.html
@@ -40,6 +40,9 @@
         <input type="submit" value="Sign Up" />
         <a href="#">Find Kokoa Account or Password</a>
     </form>
+    <div id="no-mobile">
+        <span>Your screen is too big :(</span>
+    </div>
 
     <script src="https://kit.fontawesome.com/1a122948e3.js" crossorigin="anonymous"></script>
 </body>
