--- a/settings.html
+++ b/settings.html
@@ -170,6 +170,9 @@
             </li>
         </ul>
     </nav>
+    <div id="no-mobile">
+        <span>Your screen is too big :(</span>
+    </div>
 
     <script src="https://kit.fontawesome.com/1a122948e3.js" crossorigin="anonymous"></script>
 </body>
