--- a/chat.html
+++ b/chat.html
@@ -16,7 +16,7 @@
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <a href="login.html"><span>21:56</span></a>
+            <a href="index.html"><span>21:56</span></a>
         </div>
         <div class="status-bar__column">
             <span>11%</span>
