--- a/friends.html
+++ b/friends.html
@@ -107,7 +107,10 @@
     </div>
 
     <div id="no-mobile">
-        <span>Your screen is too big :(</span>
+        <div id="no-mobile__text">
+            <span>Your screen is too big :(</span>
+            <p>Please reduce the width of the browser to 520px or less!!</p>
+        </div>
     </div>
 
     <script src="https://kit.fontawesome.com/1a122948e3.js" crossorigin="anonymous"></script>
