--- a/more.html
+++ b/more.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="status-bar">
+    <div class="status-bar status-bar-bc">
         <div class="status-bar__column">
             <span>No Service</span>
             <!-- To do : Wifi Icon-->
